syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/paweldyl/blog-backend/pb";

message UpdateUserRequest {
    optional string username = 1;
}

message UpdateUserResponse {
    User user = 1;
}